<resources>
    <string name="app_name">ActivityReminder</string>
    <string name="resume_on_reboot">Resume on reboot</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="silent_hours">Silent hours</string>
    <string name="start_at">Start at</string>
    <string name="stop_at">Stop at</string>
    <string name="steps_considered_as_active">Steps considered as active</string>
    <string name="startReminder">Start activity reminder</string>
    <string name="stopReminder">Stop activity reminder</string>
    <string name="resume_on_reboot_summary">Resume ActivityReminder on device restart</string>
    <string name="step_count">Step count</string>
    <string name="reminder_interval">Reminder interval</string>
    <string name="remind_interval_summary">Remind me this often (in minutes)</string>
    <string name="btn_sync_to_wear">Save settings</string>
    <string name="no_wear_api">Please install Android Wear app!</string>
    <string name="key_resume_on_boot">resume_on_boot</string>
    <string name="key_silent_start">silent_start</string>
    <string name="key_silent_stop">silent_stop</string>
    <string name="key_remind_interval">remind_interval</string>
    <string name="key_step_trigger">step_trigger</string>
    <string name="synced_to_wear">Settings synced to wear!</string>
    <string name="btn_launch_wear">Start Wear app</string>
    <string name="wear_opened">Wear app opened</string>
    <string name="resume_on_reboot_main_title">Reboot</string>
    <string name="remind_interval_main_title">Reminds</string>
    <string name="steps_main_title">Steps</string>
    <string name="notification_priority_main_title">Notification priority</string>
    <string name="notification_priority_default_value">2</string>
    <string name="key_notification_priority">notification_priority</string>



</resources>
